crates/ty_server/tests/e2e/snapshots/e2e__publish_diagnostics__on_did_change_script_python_requirement.snap
---
source: crates/ty_server/tests/e2e/publish_diagnostics.rs
expression: initial_diagnostics
---
PublishDiagnosticsParams {
    uri: Url {
        scheme: "file",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: None,
        port: None,
        path: "<temp_dir>/src/script.py",
        query: None,
        fragment: None,
    },
    version: Some(
        1,
    ),
    diagnostics: [
        Diagnostic {
            range: Range {
                start: Position {
                    line: 4,
                    character: 0,
                },
                end: Position {
                    line: 4,
                    character: 23,
                },
            },
            severity: Some(
                Error,
            ),
            code: Some(
                String(
                    "unresolved-reference",
                ),
            ),
            code_description: Some(
                CodeDescription {
                    href: Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "ty.dev",
                            ),
                        ),
                        port: None,
                        path: "/rules",
                        query: None,
                        fragment: Some(
                            "unresolved-reference",
                        ),
                    },
                },
            ),
            source: Some(
                "ty",
            ),
            message: String(
                "Name `PythonFinalizationError` used when not defined\n\ninfo: `PythonFinalizationError` was added as a builtin in Python 3.13",
            ),
            tags: None,
            related_information: None,
            data: None,
        },
    ],
}
