crates/ty_server/tests/e2e/snapshots/e2e__publish_diagnostics__on_did_change_watched_files.snap
---
source: crates/ty_server/tests/e2e/publish_diagnostics.rs
expression: diagnostics
---
{
  "uri": "file://<temp_dir>/src/foo.py",
  "version": 1,
  "diagnostics": []
}
