crates/ty_server/tests/e2e/snapshots/e2e__publish_diagnostics__on_did_open_non_existing_file_workspace_with_untitled_uri.snap
---
source: crates/ty_server/tests/e2e/publish_diagnostics.rs
expression: diagnostics
---
PublishDiagnosticsParams {
    uri: Url {
        scheme: "untitled",
        cannot_be_a_base: true,
        username: "",
        password: None,
        host: None,
        port: None,
        path: "foo.py",
        query: None,
        fragment: None,
    },
    version: Some(
        1,
    ),
    diagnostics: [
        Diagnostic {
            range: Range {
                start: Position {
                    line: 1,
                    character: 11,
                },
                end: Position {
                    line: 1,
                    character: 13,
                },
            },
            severity: Some(
                Error,
            ),
            code: Some(
                String(
                    "invalid-return-type",
                ),
            ),
            code_description: Some(
                CodeDescription {
                    href: Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "ty.dev",
                            ),
                        ),
                        port: None,
                        path: "/rules",
                        query: None,
                        fragment: Some(
                            "invalid-return-type",
                        ),
                    },
                },
            ),
            source: Some(
                "ty",
            ),
            message: String(
                "Return type does not match returned value: expected `str`, found `Literal[42]`",
            ),
            tags: None,
            related_information: None,
            data: None,
        },
    ],
}
